# tiny-future-wrapper

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: gtest.cmake
src/: CMakeLists.txt  main.cpp
src/future_wrapper/: define.hpp  executor.hpp  future-inl.hpp  future.hpp  promise-inl.hpp  promise.hpp
src/future_wrapper/detail/: shared_state.hpp
src/helper/: buffer.hpp  buffer_test.cpp  literal.hpp  logger.hpp  os.hpp  os_test.cpp  random.hpp
